cmake_minimum_required(VERSION 3.24)
project(wettttt)

set(CMAKE_CXX_STANDARD 17)

add_executable(wettttt main.cpp RankedAvlTree.h TeamByStats.cpp TeamByStats.h wet2util.h worldcup23a2.cpp worldcup23a2.h TeamById.cpp TeamById.h UF.h Player.h Player.cpp LinkedList.cpp LinkedList.h hashTable.cpp hashTable.h AvlTree.h)
